# EduinfraBrasilService

./: Dockerfile  pyproject.toml
api/: app.py
api/controller/: data_controller.py
api/dao/: data_dao.py
api/dto/: data_schema.py
api/service/: data_service.py
